feat: enhance resume generation with structured metadata, improved formatting, and updated content

--- a/src/resume.mdx
+++ b/src/resume.mdx
@@ -2,107 +2,78 @@
 
 ## About
 
-Experienced Technical Lead and senior full-stack engineer with 6+ years’ expertise in React, .NET Core, and Azure Cloud. Adept at leading high-performing teams, designing robust software architectures, and delivering scalable, client-focused solutions. Recognized for strong technical leadership, commitment to best practices, and passion for continuous improvement in Agile/Scrum environments.
+Senior Full Stack Developer with 6 years of proven expertise in designing, developing, and delivering scalable software solutions using .NET Core, React, and Azure Cloud Platform. Skilled technical leader adept at managing high-performing teams, enforcing coding standards, and driving Agile best practices. Strong communicator with a language-agnostic mindset and a passion for quality, continuous improvement, and client satisfaction.
 
 ---
 
-## Technical Skill Set
+## Technical Skills
 
-### Programming Languages
-C#, TypeScript, JavaScript, SQL (T-SQL, P-SQL), Python, Java, C, C++
-
-### Frontend Frameworks / Tools
-React, Angular, Next.js, Redux, Vue.js, HTML5, CSS3, TailwindCSS, Webpack
-
-### Backend Frameworks / Tools
-.NET, .NET Core, ASP.NET, ASP.NET Core, Entity Framework, Node.js, NestJS, FastAPI, Express.js
-
-### Cloud & DevOps
-Azure, AWS, Google Cloud Platform (GCP), Azure DevOps, Docker, Kubernetes, Terraform, Git, Jenkins, GitHub Actions, CI/CD pipelines
-
-### Databases
-SQL Server, PostgreSQL, MySQL, MongoDB, Redis, Neo4j
-
-### Testing & Quality
-NUnit, Test Driven Development (TDD), Behavior Driven Development (BDD), Unit Testing, Integration Testing, End-to-End Testing, Postman
-
-### Architecture & Methodologies
-Microservices, RESTful APIs, GraphQL, Identity Server integration, Agile, Scrum, Kanban, Product Engineering, Team Leadership
+- **Languages:** C#, TypeScript, JavaScript, SQL (T-SQL, P-SQL)  
+- **Frameworks & Technologies:** .NET Core, ASP.NET Core, React, Angular, RESTful APIs, Entity Framework  
+- **Databases:** MS SQL Server, PostgreSQL, MongoDB  
+- **Cloud & DevOps:** Azure, Azure DevOps, GitHub Actions, Terraform, CI/CD pipelines  
+- **Testing & Methodologies:** NUnit, Test Driven Development (TDD), Agile (Scrum, Kanban)  
+- **Others:** Microservices architecture, Docker, Kubernetes, SignalR, RabbitMQ  
 
 ---
 
-## Work Experience
+## Professional Experience
 
-### **Senior Engineer (Full Stack, Lead)** — Nagarro, Sri Lanka
+### Nagarro, Sri Lanka — Senior Engineer (Full Stack)  
+*Dec 2023 – Present*  
+- Spearheaded the migration of legacy ASP.NET Core applications to scalable microservices architecture using .NET 8+ and Azure infrastructure, improving maintainability and resilience.  
+- Led modernization of SPAs from Knockout.js to React, delivering improved performance and user experience aligned with client needs.  
+- Implemented Infrastructure as Code (Terraform) and automated CI/CD pipelines (GitHub Actions, Azure DevOps) ensuring seamless and reliable deployments.
 
-*Dec 2023 – Present*
+### Zone24x7, Sri Lanka — Software Engineer (Full Stack)  
+*Feb 2020 – Dec 2023*  
+- Led Angular application upgrade projects, resolving compatibility issues and optimizing performance for enterprise-grade web apps.  
+- Developed scalable real-time data processing tools leveraging Hangfire, SignalR, and RabbitMQ supporting robust distributed systems.  
+- Designed and automated Postman test suites and integrated testing workflows, reducing QA effort by 30% and reinforcing code quality.
 
-* Led cross-functional teams migrating legacy ASP.NET Core apps to microservices using .NET 8+ and React, greatly enhancing scalability and maintainability.
-* Architected and implemented Azure infrastructure via Terraform and orchestrated CI/CD pipelines (GitHub Actions & Azure DevOps) for rapid, automated deployments.
-* Drove coding standards, code reviews, and Agile best practices, ensuring high-quality software delivery and fostering continuous team growth.
-
-### **Software Engineer (Full Stack / Team Lead)** — Zone24x7, Sri Lanka
-
-*Feb 2020 – Dec 2023*
-
-* Spearheaded frontend modernization by upgrading Angular solutions and optimizing JavaScript bundles, resulting in significantly improved performance and reduced load times.
-* Designed and delivered a custom ETL/data sync system (RabbitMQ, Hangfire, SignalR), automating business-critical processes while enforcing robust QA via automated testing and CI.
-* Mentored and led junior engineers, promoting a collaborative Agile culture and contributing directly to team performance evaluations and growth.
-
-### **Freelance Software Engineer** — Self Employed, Sri Lanka
-
-*Jan 2018 – Feb 2020*
-
-* Delivered bespoke 2D/3D content creation tools and After Effects plugins, demonstrating rapid adaptation to diverse client stacks and requirements.
-* Engineered complex integrations and particle simulations in Python and ActionScript, showcasing problem-solving and solution design skills.
-* Communicated directly with clients, ensuring on-time, high-quality delivery and full requirements alignment.
+### Freelance Software Engineer, Sri Lanka  
+*Jan 2018 – Feb 2020*  
+- Delivered custom software tools for 2D/3D content creation and motion graphics plugins, applying strong problem-solving and software design skills.  
+- Developed reusable middleware components for security and performance, demonstrating adaptability across multiple programming languages and frameworks.
 
 ---
 
 ## Education
 
-### Kingston University, UK – B.Sc (Hons) in Computer Science
-(*Second Class Honours; specialization in software engineering and web, 2020–2023*)
+- **B.Sc (Hons) Computer Science**, Kingston University, UK — 2020-2023  
+  Graduated with Second Class Honours; specialized in software engineering and scalable web application development.  
 
-### SLTC, Sri Lanka – Software Engineering Bootcamp Certification
-(*SLASSCOM-backed bootcamp; comprehensive coverage of modern full-stack practices, 2019–2020*)
-
-### Colombo South International College, Sri Lanka – Secondary School Completion
-(*A/L: BBB in Maths, Chemistry, Physics; 1999–2011*)
+- **Software Engineering Bootcamp Certification**, SLTC, Sri Lanka — 2019-2020  
+  Intensive full-stack development program emphasizing modern front-end and back-end technologies.
 
 ---
 
-## Personal Projects
+## Continuous Education & Certifications
 
-- [Payload Injection Filter](https://github.com/bsaranga/PayloadInjectionFilter) — Production-ready ASP.NET Core middleware for secure and efficient request filtering using regex.
-
-- [LearnTree AI](https://learntree.ai) — Proprietary generative AI platform for building interactive, human-readable knowledge graphs.
+- Microsoft Certified: Azure Fundamentals (AZ-900) – Microsoft / Pearson  
+- Mathematics for Machine Learning – Deeplearning.ai / Coursera  
+- Cryptography and Information Theory – University of Colorado / Coursera  
+- Introduction to CS and Programming Using Python – MITx / EdX  
 
 ---
 
-## Continuous Education
+## Selected Projects & Contributions
 
-- Microsoft Certified: Azure Fundamentals AZ-900 (Microsoft / Pearson) — Foundation in Azure cloud concepts and services.
-- Mathematics for Machine Learning (Deeplearning.ai / Coursera) — Completed specialization for data-driven problem solving.
-- Cryptography and Information Theory (University of Colorado / Coursera) — Gained core understanding of security fundamentals.
-- 6.00.1x: Introduction to Computer Science and Programming Using Python (MITx / EdX) — Algorithms, data structures, and computational thinking.
+- **Payload Injection Filter:** Developed reusable ASP.NET Core middleware to detect and block malicious requests via regex filtering. [GitHub](https://github.com/bsaranga/PayloadInjectionFilter)  
+- **LearnTree AI:** Built a generative AI app for interactive knowledge graphs, demonstrating innovation in AI and UX. [Website](https://learntree.ai)  
+- Contributor to **Product Engineering Manifesto**, promoting high-quality, collaborative software engineering practices. [Repository](https://github.com/anttiviljami/product-engineer-manifesto)  
 
 ---
 
 ## References
 
-- **Azmeer Mohammed**  
-  Head, Department of Multimedia (SLTC)  
-  azmeerm@gmail.com | +94 77 734 8691
+- **Azmeer Mohammed** — Head, Department of Multimedia (SLTC)  
+  azmeerm@gmail.com | +94 77 734 8691  
 
-- **Chathuranga Wijeratna**  
-  Director of Technology (Nagarro)  
-  cwijeratna@yahoo.com
+- **Chathuranga Wijeratna** — Director of Technology (Nagarro)  
+  cwijeratna@yahoo.com  
 
-- **Chathuranganie Pathirage**  
-  Associate Software Architect (Zone24x7)  
-  chathu03j@yahoo.com | +94 77 906 9494
-
----
+- **Chathuranganie Pathirage** — Associate Software Architect (Zone24x7)  
+  chathu03j@yahoo.com | +94 77 906 9494  
 
 </div>
