--- a/src/resume.mdx
+++ b/src/resume.mdx
@@ -2,18 +2,27 @@
 
 ## About
 
-Senior Full Stack Developer with 6 years of proven expertise in designing, developing, and delivering scalable software solutions using .NET Core, React, and Azure Cloud Platform. Skilled technical leader adept at managing high-performing teams, enforcing coding standards, and driving Agile best practices. Strong communicator with a language-agnostic mindset and a passion for quality, continuous improvement, and client satisfaction.
+Highly skilled <strong>Senior Full Stack Developer</strong> with 6+ years of professional experience specializing in <strong>.NET Core</strong> and <strong>React</strong>. Proven expertise in leading teams to deliver scalable, high-quality web applications and RESTful APIs on Azure cloud platforms. Strong advocate of agile methodologies, test-driven development, and continuous integration/delivery pipelines. Adept at bridging technical solutions with client requirements, fostering collaboration, and driving product excellence.
 
 ---
 
 ## Technical Skills
 
-- **Languages:** C#, TypeScript, JavaScript, SQL (T-SQL, P-SQL)  
-- **Frameworks & Technologies:** .NET Core, ASP.NET Core, React, Angular, RESTful APIs, Entity Framework  
-- **Databases:** MS SQL Server, PostgreSQL, MongoDB  
-- **Cloud & DevOps:** Azure, Azure DevOps, GitHub Actions, Terraform, CI/CD pipelines  
-- **Testing & Methodologies:** NUnit, Test Driven Development (TDD), Agile (Scrum, Kanban)  
-- **Others:** Microservices architecture, Docker, Kubernetes, SignalR, RabbitMQ  
+### Programming & Frameworks  
+- <strong>C#, TypeScript, JavaScript, Python</strong>  
+- .NET Core, ASP.NET Core, React.js, Angular, RESTful APIs, Entity Framework  
+
+### Cloud & Infrastructure  
+- Microsoft Azure (infrastructure provisioning with Terraform, Azure DevOps CI/CD pipelines)  
+- Docker, Kubernetes, GitHub Actions  
+
+### Databases & Messaging  
+- MS SQL Server, PostgreSQL, MongoDB  
+- RabbitMQ, SignalR  
+
+### Development Practices  
+- Agile (Scrum, Kanban), Test Driven Development (TDD), NUnit unit testing  
+- API design & integration, Microservices architectures  
 
 ---
 
@@ -21,59 +30,54 @@ Senior Full Stack Developer with 6 years of proven expertise in designing, devel
 
 ### Nagarro, Sri Lanka — Senior Engineer (Full Stack)  
 *Dec 2023 – Present*  
-- Spearheaded the migration of legacy ASP.NET Core applications to scalable microservices architecture using .NET 8+ and Azure infrastructure, improving maintainability and resilience.  
-- Led modernization of SPAs from Knockout.js to React, delivering improved performance and user experience aligned with client needs.  
-- Implemented Infrastructure as Code (Terraform) and automated CI/CD pipelines (GitHub Actions, Azure DevOps) ensuring seamless and reliable deployments.
+- Spearheaded migration of legacy ASP.NET Core applications to scalable microservices architecture (.NET 8+), enhancing system resilience and maintainability.  
+- Led modernization of legacy Single Page Applications using React.js, significantly improving UI performance and developer productivity.  
+- Automated Azure infrastructure deployments using Terraform and established robust CI/CD pipelines incorporating GitHub Actions and Azure DevOps for seamless delivery.
 
 ### Zone24x7, Sri Lanka — Software Engineer (Full Stack)  
 *Feb 2020 – Dec 2023*  
-- Led Angular application upgrade projects, resolving compatibility issues and optimizing performance for enterprise-grade web apps.  
-- Developed scalable real-time data processing tools leveraging Hangfire, SignalR, and RabbitMQ supporting robust distributed systems.  
-- Designed and automated Postman test suites and integrated testing workflows, reducing QA effort by 30% and reinforcing code quality.
+- Architected and implemented a real-time ETL system leveraging Hangfire and SignalR, boosting data processing efficiency and system responsiveness.  
+- Directed Angular migration to latest frameworks version, resolving complex compatibility challenges and improving application stability.  
+- Developed an automated Postman testing suite and optimized JavaScript bundles, reducing QA time and front-end asset size by 50%.  
 
 ### Freelance Software Engineer, Sri Lanka  
 *Jan 2018 – Feb 2020*  
-- Delivered custom software tools for 2D/3D content creation and motion graphics plugins, applying strong problem-solving and software design skills.  
-- Developed reusable middleware components for security and performance, demonstrating adaptability across multiple programming languages and frameworks.
+- Built Python and MEL-based tools for 2D/3D content creation and developed After Effects plugins, showcasing adaptability to diverse technology stacks.  
+- Developed advanced particle simulation modules that enhanced visual effects quality in motion graphics projects.  
 
 ---
 
 ## Education
 
-- **B.Sc (Hons) Computer Science**, Kingston University, UK — 2020-2023  
-  Graduated with Second Class Honours; specialized in software engineering and scalable web application development.  
-
-- **Software Engineering Bootcamp Certification**, SLTC, Sri Lanka — 2019-2020  
-  Intensive full-stack development program emphasizing modern front-end and back-end technologies.
+- **B.Sc (Hons) in Computer Science**, Kingston University, UK (2020–2023)  
+  Specialized in software engineering and web development, graduated with Second Class Honours.  
+- **Software Engineering Bootcamp Certification**, SLTC, Sri Lanka (2019–2020)  
+  Intensive full-stack development training under SLASSCOM, covering front-end and back-end technologies.  
+- Secondary School Completion, Colombo South International College, Sri Lanka  
 
 ---
 
 ## Continuous Education & Certifications
 
-- Microsoft Certified: Azure Fundamentals (AZ-900) – Microsoft / Pearson  
-- Mathematics for Machine Learning – Deeplearning.ai / Coursera  
-- Cryptography and Information Theory – University of Colorado / Coursera  
-- Introduction to CS and Programming Using Python – MITx / EdX  
+- Microsoft Certified: Azure Fundamentals (AZ-900) – Certified foundational cloud and Azure service knowledge.  
+- Mathematics for Machine Learning (Deeplearning.ai / Coursera)  
+- Cryptography and Information Theory (University of Colorado / Coursera)  
+- Introduction to Computer Science and Programming Using Python (MITx / EdX)  
 
 ---
 
-## Selected Projects & Contributions
+## Selected Projects
 
-- **Payload Injection Filter:** Developed reusable ASP.NET Core middleware to detect and block malicious requests via regex filtering. [GitHub](https://github.com/bsaranga/PayloadInjectionFilter)  
-- **LearnTree AI:** Built a generative AI app for interactive knowledge graphs, demonstrating innovation in AI and UX. [Website](https://learntree.ai)  
-- Contributor to **Product Engineering Manifesto**, promoting high-quality, collaborative software engineering practices. [Repository](https://github.com/anttiviljami/product-engineer-manifesto)  
+- [Payload Injection Filter](https://github.com/bsaranga/PayloadInjectionFilter) – Developed an ASP.NET Core reusable middleware to short-circuit malicious requests for enhanced security.  
+- [LearnTree AI](https://learntree.ai) – Created a generative AI app for building interactive, human-readable knowledge graphs.  
+- Contributor to the [Product Engineering Manifesto](https://github.com/anttiviljami/product-engineer-manifesto), promoting quality and collaborative product development principles.
 
 ---
 
 ## References
 
-- **Azmeer Mohammed** — Head, Department of Multimedia (SLTC)  
-  azmeerm@gmail.com | +94 77 734 8691  
-
-- **Chathuranga Wijeratna** — Director of Technology (Nagarro)  
-  cwijeratna@yahoo.com  
-
-- **Chathuranganie Pathirage** — Associate Software Architect (Zone24x7)  
-  chathu03j@yahoo.com | +94 77 906 9494  
+- **Azmeer Mohammed** – Head, Department of Multimedia, SLTC | azmeerm@gmail.com | +94 77 734 8691  
+- **Chathuranga Wijeratna** – Director of Technology, Nagarro | cwijeratna@yahoo.com  
+- **Chathuranganie Pathirage** – Associate Software Architect, Zone24x7 | chathu03j@yahoo.com | +94 77 906 9494  
 
 </div>
