feat: enhance README with CLI usage instructions, update context and job description files, and improve resume generation logic

--- a/src/resume.mdx
+++ b/src/resume.mdx
@@ -2,82 +2,98 @@
 
 ## About
 
-Highly skilled <strong>Senior Full Stack Developer</strong> with 6+ years of professional experience specializing in <strong>.NET Core</strong> and <strong>React</strong>. Proven expertise in leading teams to deliver scalable, high-quality web applications and RESTful APIs on Azure cloud platforms. Strong advocate of agile methodologies, test-driven development, and continuous integration/delivery pipelines. Adept at bridging technical solutions with client requirements, fostering collaboration, and driving product excellence.
+Highly experienced Senior Full Stack Developer with 6+ years of hands-on expertise in .NET Core, C#, RESTful API development, and modern JavaScript frameworks (React, Next.js, Angular). Proven ability to lead teams, modernize legacy systems, and deliver scalable, high-performance solutions on cloud platforms (AWS, Azure). Strong advocate of agile methodologies, test-driven development, and product engineering best practices. Seeking to leverage technical leadership and full-stack proficiency as an Associate Technical Lead or Technical Lead.
 
 ---
 
 ## Technical Skills
 
-### Programming & Frameworks  
-- <strong>C#, TypeScript, JavaScript, Python</strong>  
-- .NET Core, ASP.NET Core, React.js, Angular, RESTful APIs, Entity Framework  
-
-### Cloud & Infrastructure  
-- Microsoft Azure (infrastructure provisioning with Terraform, Azure DevOps CI/CD pipelines)  
-- Docker, Kubernetes, GitHub Actions  
-
-### Databases & Messaging  
-- MS SQL Server, PostgreSQL, MongoDB  
-- RabbitMQ, SignalR  
-
-### Development Practices  
-- Agile (Scrum, Kanban), Test Driven Development (TDD), NUnit unit testing  
-- API design & integration, Microservices architectures  
+- **Languages:** C#, JavaScript, TypeScript, SQL (T-SQL, P-SQL), Python, Java, C, C++
+- **Frameworks/Technologies:** .NET, .NET Core, ASP.NET, Entity Framework, Dapper, RESTful APIs, React, Next.js, Angular, Node.js, Express.js, RabbitMQ, Hangfire, SignalR, Microservices
+- **Databases:** SQL Server, PostgreSQL, MySQL, MongoDB, Redis, Neo4j
+- **Cloud:** AWS (S3, Lambda), Azure, GCP
+- **DevOps/Tools:** Docker, Git, GitHub Actions, Azure DevOps, Terraform, CI/CD
+- **Practices:** Agile, Scrum, TDD, BDD, Unit Testing
 
 ---
 
-## Professional Experience
+## Work Experience
 
-### Nagarro, Sri Lanka — Senior Engineer (Full Stack)  
-*Dec 2023 – Present*  
-- Spearheaded migration of legacy ASP.NET Core applications to scalable microservices architecture (.NET 8+), enhancing system resilience and maintainability.  
-- Led modernization of legacy Single Page Applications using React.js, significantly improving UI performance and developer productivity.  
-- Automated Azure infrastructure deployments using Terraform and established robust CI/CD pipelines incorporating GitHub Actions and Azure DevOps for seamless delivery.
+### Senior Engineer (Full Stack)  
+**Nagarro, Sri Lanka**  
+*Dec 2023 – Present*
 
-### Zone24x7, Sri Lanka — Software Engineer (Full Stack)  
-*Feb 2020 – Dec 2023*  
-- Architected and implemented a real-time ETL system leveraging Hangfire and SignalR, boosting data processing efficiency and system responsiveness.  
-- Directed Angular migration to latest frameworks version, resolving complex compatibility challenges and improving application stability.  
-- Developed an automated Postman testing suite and optimized JavaScript bundles, reducing QA time and front-end asset size by 50%.  
+- Modernized legacy SPAs to React.js and migrated ASP.NET Core apps to microservices (.NET 8+), enhancing scalability and maintainability.
+- Provisioned Azure infrastructure with Terraform and implemented CI/CD pipelines (GitHub Actions, Azure DevOps) for automated deployments.
+- Led code reviews and knowledge sharing, promoting best practices in .NET, RESTful API design, and cloud-native development.
 
-### Freelance Software Engineer, Sri Lanka  
-*Jan 2018 – Feb 2020*  
-- Built Python and MEL-based tools for 2D/3D content creation and developed After Effects plugins, showcasing adaptability to diverse technology stacks.  
-- Developed advanced particle simulation modules that enhanced visual effects quality in motion graphics projects.  
+### Software Engineer (Full Stack)  
+**Zone24x7, Sri Lanka**  
+*Feb 2020 – Dec 2023*
+
+- Developed custom ETL and background job scheduling systems using Hangfire, SignalR, and RabbitMQ, optimizing real-time data processing.
+- Led Angular-to-latest migration and implemented Postman test suites, reducing QA hours and improving code quality via automated testing.
+- Designed and optimized SQL Server databases and JavaScript assets, achieving significant performance gains.
+
+### Freelance Software Engineer  
+**Self Employed, Sri Lanka**  
+*Jan 2018 – Feb 2020*
+
+- Built 2D/3D content creation tools and After Effects plugins, demonstrating adaptability across Python, MEL, and ActionScript.
+- Developed particle simulation engines and contributed to diverse client projects, showcasing strong problem-solving and technical breadth.
+- Delivered solutions with a focus on code quality, maintainability, and client satisfaction.
 
 ---
 
 ## Education
 
-- **B.Sc (Hons) in Computer Science**, Kingston University, UK (2020–2023)  
-  Specialized in software engineering and web development, graduated with Second Class Honours.  
-- **Software Engineering Bootcamp Certification**, SLTC, Sri Lanka (2019–2020)  
-  Intensive full-stack development training under SLASSCOM, covering front-end and back-end technologies.  
-- Secondary School Completion, Colombo South International College, Sri Lanka  
+- **B.Sc (Hons) in Computer Science**  
+  Kingston University, UK (2020 – 2023)  
+  Second Class Honours; focus: software engineering, web
 
----
+- **Software Engineering Bootcamp Certification**  
+  SLTC, Sri Lanka (2019 – 2020)  
+  SLASSCOM-backed, full-stack curriculum
 
-## Continuous Education & Certifications
-
-- Microsoft Certified: Azure Fundamentals (AZ-900) – Certified foundational cloud and Azure service knowledge.  
-- Mathematics for Machine Learning (Deeplearning.ai / Coursera)  
-- Cryptography and Information Theory (University of Colorado / Coursera)  
-- Introduction to Computer Science and Programming Using Python (MITx / EdX)  
+- **Secondary School Completion**  
+  Colombo South International College, Sri Lanka (1999 – 2011)  
+  GCE London A/L: BBB (Maths, Chemistry, Physics)
 
 ---
 
 ## Selected Projects
 
-- [Payload Injection Filter](https://github.com/bsaranga/PayloadInjectionFilter) – Developed an ASP.NET Core reusable middleware to short-circuit malicious requests for enhanced security.  
-- [LearnTree AI](https://learntree.ai) – Created a generative AI app for building interactive, human-readable knowledge graphs.  
-- Contributor to the [Product Engineering Manifesto](https://github.com/anttiviljami/product-engineer-manifesto), promoting quality and collaborative product development principles.
+- **[Payload Injection Filter](https://github.com/bsaranga/PayloadInjectionFilter):** ASP.NET Core middleware for request filtering using regex.
+- **[LearnTree AI](https://learntree.ai):** Generative AI app for interactive knowledge graphs.
+- **[Resumeagen](https://github.com/bsaranga/resumeagen):** LLM-powered resume generator.
+- **[InMemGraph DB](https://github.com/bsaranga/inmemgraph):** Lightweight in-memory graph database in C.
+- **[Product Engineering Manifesto](https://github.com/anttiviljami/product-engineer-manifesto):** Contributor to open product engineering standards.
+
+---
+
+## Certifications & Continuous Learning
+
+- **Microsoft Certified: Azure Fundamentals (AZ-900)**
+- **Mathematics for Machine Learning** (Deeplearning.ai / Coursera)
+- **Cryptography and Information Theory** (University of Colorado / Coursera)
+- **MITx 6.00.1x: Introduction to Computer Science Using Python**
 
 ---
 
 ## References
 
-- **Azmeer Mohammed** – Head, Department of Multimedia, SLTC | azmeerm@gmail.com | +94 77 734 8691  
-- **Chathuranga Wijeratna** – Director of Technology, Nagarro | cwijeratna@yahoo.com  
-- **Chathuranganie Pathirage** – Associate Software Architect, Zone24x7 | chathu03j@yahoo.com | +94 77 906 9494  
+- **Azmeer Mohammed**  
+  Head, Dept. of Multimedia (SLTC)  
+  azmeerm@gmail.com | +94 77 734 8691
+
+- **Chathuranga Wijeratna**  
+  Director of Technology (Nagarro)  
+  cwijeratna@yahoo.com
+
+- **Chathuranganie Pathirage**  
+  Associate Software Architect (Zone24x7)  
+  chathu03j@yahoo.com | +94 77 906 9494
+
+---
 
 </div>
